<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        />
    <Button
        android:id="@+id/mulBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        />
    <Button
        android:id="@+id/divBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:visibility="gone"
        />

</LinearLayout>